NTR - Fix spacing between actions in smart-bar

--- a/src/Administration/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/src/Administration/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -97,11 +97,13 @@
     }
 
     .smart-bar__actions {
+        display: flex;
+        flex-direction: row;
         text-align: right;
         white-space: nowrap;
 
         .sw-button {
-            margin-right: 5px;
+            margin-right: 8px;
 
             &:last-child {
                 margin-right: 0;
